<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_span="4"
    android:background="@color/color_white"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="16dp"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_4" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_banquanhday" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_group_8" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hoctiengnhat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_5" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_diadiem" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_group_1098" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_hangnhat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_6" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_donhang" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_group_9" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dichgiongnoi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_7" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_vieclam" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_group_11" />

        <TextView
            style="@style/chuthuong"
            android:fontFamily="@font/helveticaneue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sukien" />
    </LinearLayout>
</LinearLayout>

